# EasyRemote

./: .gitignore  Makefile  README.md  README_zh.md  pyproject.toml
.github/actions/check-changes/: action.yml
.github/workflows/: daily-release.yml  deploy-api.yml  deploy-web.yml  publish-easyremote.yml  release.yml
docs/: API_DESIGN.md  CAPABILITY_MANAGEMENT_PROTOCOL.md  EASYNET_MASTER_ARCHITECTURE.md  MCP_ARCHITECTURE_COMPARISON.md  MCP_COMPATIBILITY_STRATEGY.md  MCP_EVOLUTION_BLUEPRINT.md  PARADIGM_EVOLUTION_FRAMEWORK.md  PARADIGM_POSITIONING_STRATEGY.md  PHASE1_AGENT_IMPLEMENTATION.md  README.md
docs/ai/: a2a-integration.md  mcp-integration.md
docs/design/: architecture.md  load_balancing.md  overview.md  roles.md  scenarios.md
docs/development/: MODULE_REFACTORING_SUMMARY.md  NODES_REFACTORING_SUMMARY.md  PACKAGING_VERSIONING_POLICY.md  PROTOBUF_FIX_REPORT.md  REFACTORING_FIXES.md  RESIDUAL_CODE_FIXES.md  TOOLS_REFACTORING_SUMMARY.md  roadmap.md
docs/en/: README.md
docs/en/user-guide/: examples.md  installation.md  quick-start.md
docs/zh/: CORE_USE_CASES_AND_ROUTES.md  README.md
docs/zh/tutorials/: advanced-scenarios.md  basic-usage.md  deployment.md
docs/zh/user-guide/: api-reference.md  examples.md  installation.md  quick-start.md
easyremote/: __init__.py  _version.py  agent_service.py  decorators.py  device_host.py  skills.py
easyremote/a2a/: __init__.py
easyremote/core/: __init__.py  config.py
easyremote/core/balancing/: __init__.py  balancers.py  health_monitor.py  performance_collector.py  simple_balancer.py  strategies.py
easyremote/core/data/: backends.py  serialize.py
easyremote/core/nodes/: __init__.py  client.py  compute_node.py  server.py
easyremote/core/protos/: service.proto  service_pb2.py  service_pb2_grpc.py
easyremote/core/tools/: __init__.py
easyremote/core/utils/: __init__.py  async_helpers.py  asyncio_noise_filter.py  concurrency.py  exceptions.py
easyremote/mcp/: __init__.py
easyremote/protocols/: __init__.py  a2a.py  adapter.py  easyremote_runtime.py  gateway.py  mcp.py  models.py  runtime.py  service.py
examples/: README.md
examples/agent_route/: a2a_gateway_demo.py  easyremote_gateway_proxy_demo.py  mcp_gateway_demo.py  protocol_service_quickstart.py  skill_pipeline_quickstart.py  user_device_dynamic_camera_skill.py  user_remote_agent_service_quickstart.py
examples/decorator_route/: client.py  compute_node.py  remote_stream_quickstart.py  server.py
gallery/: Makefile  README.md  SMOKE_TEST_REPORT.md  killer_apps.md  run_smoke_tests.py
gallery/projects/: README.md
gallery/projects/00_basic_remote_math/: Makefile  README.md  client.py  compute_node.py  server.py
gallery/projects/01_team_gpu_pool_load_balancing/: Makefile  README.md  client.py  node_gpu_alpha.py  node_gpu_beta.py  server.py
gallery/projects/02_mcp_tool_mesh/: Makefile  README.md  run_demo.py  runtime.py
gallery/projects/03_a2a_incident_copilot/: README.md  run_demo.py  runtime.py
gallery/projects/04_function_marketplace/: Makefile  README.md  agent_catalog_demo.py  client.py  node_finance.py  node_ops.py  runtime.py  server.py
gallery/projects/05_local_data_residency_ai/: Makefile  README.md  client.py  node_local_processor.py  protocol_demo.py  runtime.py  server.py
gallery/projects/06_runtime_device_capability_injection/: Makefile  README.md  agent_client.py  run_demo.sh  server.py  user_device_node.py
gallery/projects/06_runtime_device_capability_injection/sandbox/: camera_actions.py  stream_actions.py
gallery/projects/06_runtime_device_capability_injection/skills/camera-runtime-pack/: runtime.py  skill.md
skills/easyremote-remote-agent/: SKILL.md
tests/: conftest.py  test_asyncio_noise_filter.py  test_client_node_selection.py  test_client_streaming.py  test_compute_node_backpressure.py  test_compute_node_capabilities.py  test_compute_node_executor_kwargs.py  test_concurrency_utils.py  test_decorator_proxy_implementations.py  test_decorators.py  test_gateway_load_balancer.py  test_github_publish_workflow_contract.py  test_health_monitor.py  test_packaging_contract.py  test_protocol_adapters.py  test_protocol_service_templates.py  test_remote_agent_service.py  test_remote_skills.py  test_serialization_backends.py  test_server_list_nodes_capabilities.py  test_server_protocol_execute_invocation_stream.py  test_server_stream_call.py  test_simple_balancer_oop.py  test_user_device_capability_host.py  test_uv_workflow_contract.py
