# pyproject.toml
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easyremote"
dynamic = ["version"]
description = "A lightweight framework for hassle-free remote computing resource sharing"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Silan Hu", email = "silan.hu@u.nus.edu"}]
maintainers = [{name = "Silan Hu", email = "silan.hu@u.nus.edu"}]
keywords = [
    "remote-computing", 
    "distributed-computing", 
    "gpu-sharing", 
    "cloud-computing", 
    "grpc", 
    "asyncio"
]
classifiers = [
    # Development Status
    "Development Status :: 4 - Beta",
    
    # Intended Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    
    # License
    "License :: OSI Approved :: MIT License",
    
    # Programming Language
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    
    # Topics
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    
    # Operating System
    "Operating System :: OS Independent",
    
    # Environment
    "Environment :: Web Environment",
    "Environment :: Console",
    
    # Framework
    "Framework :: AsyncIO",
    
    # Natural Language
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    
    # Typing
    "Typing :: Typed",
]

dependencies = [
    "grpcio>=1.71.0,<2.0.0",
    "protobuf>=4.21.0,<6.0.0",
    "rich>=13.0.0",
    "pyfiglet>=0.8.0",
    "psutil>=5.8.0"
]

requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Qingbolan/EasyRemote"
Documentation = "https://github.com/Qingbolan/EasyRemote/blob/main/README.md"
Repository = "https://github.com/Qingbolan/EasyRemote.git"
"Bug Tracker" = "https://github.com/Qingbolan/EasyRemote/issues"
Changelog = "https://github.com/Qingbolan/EasyRemote/releases"
"Source Code" = "https://github.com/Qingbolan/EasyRemote"

[project.optional-dependencies]
gpu = [
    "GPUtil>=1.4.0"
]
build = [
    "grpcio-tools>=1.71.0,<2.0.0"
]
dev = [
    "grpcio-tools>=1.71.0,<2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.17.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
    "mkdocstrings>=0.19.0"
]

[dependency-groups]
dev = [
    "grpcio-tools>=1.71.0,<2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.17.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0"
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=8.0.0",
    "mkdocstrings>=0.19.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "easyremote._version.__version__"}

[tool.uv]
default-groups = ["dev", "test"]

[tool.setuptools.packages.find]
where = ["."]
include = ["easyremote*"]

[tool.setuptools.package-data]
easyremote = [
    "core/protos/*.proto", 
    "core/protos/*_pb2.py", 
    "core/protos/*_pb2_grpc.py", 
    "py.typed"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | easyremote/core/protos/.*_pb2\.py
  | easyremote/core/protos/.*_pb2_grpc\.py
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip_glob = ["easyremote/core/protos/*_pb2.py", "easyremote/core/protos/*_pb2_grpc.py"]

[tool.ruff]
exclude = [
    "easyremote/core/protos/*_pb2.py",
    "easyremote/core/protos/*_pb2_grpc.py",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "easyremote/core/protos/.*_pb2\\.py",
    "easyremote/core/protos/.*_pb2_grpc\\.py"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
